// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input snapshot (dois temas): claro 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        },
        {
          "color": "#111113",
        },
        {},
        null,
      ]
    }
  >
    Nome
  </Text>
  <TextInput
    accessibilityLabel="Nome, erro: Obrigatório"
    accessibilityState={
      {
        "disabled": false,
      }
    }
    editable={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
        },
        {
          "borderColor": "#B42318",
          "borderRadius": 12,
          "borderWidth": 1,
          "color": "#111113",
          "minHeight": 44,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
        },
        {
          "color": "#B42318",
        },
        {},
        null,
      ]
    }
  >
    Obrigatório
  </Text>
</View>
`;

exports[`Input snapshot (dois temas): escuro 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        },
        {
          "color": "#F2F2F3",
        },
        {},
        null,
      ]
    }
  >
    Nome
  </Text>
  <TextInput
    accessibilityLabel="Nome, erro: Obrigatório"
    accessibilityState={
      {
        "disabled": false,
      }
    }
    editable={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
        },
        {
          "borderColor": "#F97066",
          "borderRadius": 12,
          "borderWidth": 1,
          "color": "#F2F2F3",
          "minHeight": 44,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
        },
        {
          "color": "#F97066",
        },
        {},
        null,
      ]
    }
  >
    Obrigatório
  </Text>
</View>
`;
